[project]
name = "cxplorers-shared"
version = "0.1.6"
description = "Shared utilities for cxplorers microservices"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.28.1",
    "cryptography>=46.0.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"