[project]
name = "cxplorers-shared"
version = "0.2.7"
description = "Shared utilities for cxplorers microservices"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.28.1",
    "cryptography>=46.0.3",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"